--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ h2 {
 }
 .column {
   float: left;
-  width: 80%;
+  width: 50%;
 }
 .column {
 	text-align:justify;
@@ -79,6 +79,17 @@ h2 {
 .banner {
 	width: 100%;
 }
+
+.responsive {
+	width: 100%;
+	height: auto;
+}
+/*
+img {
+	max-width: 100%;
+	height: auto;
+}
+*/
 .banner {
 	padding: 5px;
 }
@@ -86,9 +97,9 @@ h3 {
 	font-size: 24px;
 }
 .resize {
-	max-width: 45%;
+	max-width: 70%;
 }
-/*
+
 input[type=text] {
 	width: 30%;
 	padding: 8px 15px;
